# co2mon

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile.tests  Makefile  README.md  index.html  main.c  update_data.sh  update_graph.sh
co2mon-dumper/: CMakeLists.txt
co2mon-dumper/src/: main.c
co2mond/: CMakeLists.txt
co2mond/src/: main.c
dbusrules/: io.github.dmage.CO2Mon.conf
graph/: Makefile  monitor.py  update_data.sh
graph/collectd/: co2mon.conf.example  co2mon.py
graph/munin/: co2mon  co2mon_temp
graph/rrd/: update_data.sh  update_graph.sh
include/: config.h.in  device.h
libco2mon/: CMakeLists.txt
libco2mon/include/: co2mon.h  config.h.in
libco2mon/src/: co2mon.c
libco2mon/tests/: test_co2mon.c
src/: device.c  main.c
udevrules/: 99-co2mon.rules
